-
Type:
Bug
-
Resolution: Done
-
Priority:
Minor - P4
-
Affects Version/s: None
-
Component/s: Aggregation Framework
-
Fully Compatible
-
ALL
-
-
None
-
None
-
None
-
None
-
None
-
None
-
None
I would expect aggregation explain plans to return a boolean value for isMultiKey instead of the string "isMultiKey". Here's the output from the included JS test:
{
"stages" : [
{
"query" : {
},
"plan" : {
"cursor" : "BasicCursor",
"isMultiKey" : "isMultiKey",
"scanAndOrder" : false,
"allPlans" : [
{
"cursor" : "BasicCursor"
}
]
}
}
],
"ok" : 1
}
assert: ["string"] != ["boolean"] are not equal : undefined
Version: 735a759908a3a8e792909eb23160ec29eba83e9c