SERVER-12285 fix isMultiKey in agg explain